modifications, fallback to DC color

--- a/app/assets/stylesheets/text_styles.scss.erb
+++ b/app/assets/stylesheets/text_styles.scss.erb
@@ -1,6 +1,6 @@
 @import "variables";
 .blue {
-  color: var(--theme-primary-100, #3B6B90);
+  color: var(--theme-primary-100, #007bc4);
 }
 .darkblue {
   color: #003260;
