--- a/app/javascript/css/main.scss
+++ b/app/javascript/css/main.scss
@@ -38,7 +38,7 @@ body {
 footer {
   font-size: 14px;
   color: var(--grey-000);
-  background-color: var(--theme-primary-100, #3B6B90);
+  background-color: var(--theme-primary-100, #007bc4);
   position: absolute;
   left: 0;
   bottom: 0;
