--- a/config/client_config/me/components/financial_assistance/app/asssets/stylesheets/financial_assistance/eligibility_results.scss
+++ b/config/client_config/me/components/financial_assistance/app/asssets/stylesheets/financial_assistance/eligibility_results.scss
@@ -74,7 +74,7 @@
   font-size: 1.5em;
 }
 .fa, .knowmore h4 {
-  color: var(--theme-primary-100, #3B6B90);
+  color: var(--theme-primary-100, #007bc4);
 }
 .fa-2x {
   font-size: 2em;
