cr97 page 3 accessibility fix

--- a/app/javascript/css/cr97.scss
+++ b/app/javascript/css/cr97.scss
@@ -1,9 +1,11 @@
 :root {
     --secondary-font-color: #676C72; //This should be used for secondary text throughout the page
     --theme-primary-100: #3B6B90; //This should always be used as the primary blue
-    --error-text-color: #D42537;
+    --theme-secondary: #3D5D6F; //This should be used as a secondary darker blue
+    --error-color: #D42537;
     --primary-white: #ffffff;
     --primary-black: #000000;
+    --alert-notice-green: #62703E;
 
     --font: Barlow, sans-serif;
     --default-font-color: #323130;
