cr97 page 4 accessibility fix

--- a/app/assets/stylesheets/custom.scss.erb
+++ b/app/assets/stylesheets/custom.scss.erb
@@ -4716,7 +4716,7 @@ position: absolute;
 .memo {
   text-align: right;
   margin: 0;
-  color: #838780;
+  color: var(--secondary-font-color, #838780);
 }
 
 #shop-for-plans-widget .image-area {
