add AA compliance for personal info page

--- a/app/javascript/css/cr97.scss
+++ b/app/javascript/css/cr97.scss
@@ -1,5 +1,6 @@
 :root {
     --secondary-font-color: #676C72; //secondary text gray
+    --bold-font-color: #323130; //bold text
     --theme-primary-100: #3B6B90; //primary blue
     --theme-secondary: #3D5D6F; //secondary dark blue
     --error-color: #D42537; //primary red
