level AA compliance for ME client homepage contrast ratios  (#3324)
* 186419463 homepage accessibility fix

* modifications, fallback to DC color

* add base colors from me.scss

* revert back to original blue in yaml

---------

Signed-off-by: Alec Turnbull <alecturnbull81@gmail.com>
Co-authored-by: Sai Kumar Kotagiri <saikumarkotagiri9@gmail.com>

--- a/app/javascript/css/cr97.scss
+++ b/app/javascript/css/cr97.scss
@@ -1,4 +1,7 @@
 :root {
+    --secondary-font-color: #676C72; //This should be used for secondary text throughout the page
+    --theme-primary-100: #3B6B90; //This should always be used as the primary blue
+
     --font: Barlow, sans-serif;
     --default-font-color: #323130;
   
