--- a/app/javascript/css/theme.scss
+++ b/app/javascript/css/theme.scss
@@ -76,7 +76,7 @@
     font-size: 18px;
   }
   .header-text {
-    color: var(--grey-060);
+    color: var(--secondary-font-color, --grey-060);
     font-size: 14px;
     text-transform: uppercase;
     font-weight: 600;
