--- a/config/client_config/me/components/financial_assistance/app/asssets/stylesheets/financial_assistance/financial_assistance.scss
+++ b/config/client_config/me/components/financial_assistance/app/asssets/stylesheets/financial_assistance/financial_assistance.scss
@@ -52,7 +52,7 @@ input[type="radio"]:checked + label span {
 }
 
 .fa, .knowmore h4 {
-  color: #007BC4;
+  color: var(--theme-primary-100, #007bc4);
 }
 
 #backModal {
@@ -188,7 +188,7 @@ input.radio-yml {
 .title-text {
   margin-bottom: 0px;
   margin-top: 20px;
-  color: #007BC4;
+  color: var(--theme-primary-100, #007bc4);
 }
 .fa-text-color {
   font-weight: lighter;
@@ -256,7 +256,7 @@ div#add-more-link {
 }
 .help-to-decide {
   display: inline-block;
-  border-left: 1px solid #007bc4;
+  border-left: 1px solid var(--theme-primary-100, #007bc4);
   padding-left: 12px;
   margin-left: 10px;
 }
