--- a/app/javascript/css/cr97.scss
+++ b/app/javascript/css/cr97.scss
@@ -1,6 +1,9 @@
 :root {
-    --secondary-font-color: #676C72; //This should be used for secondary text throughout the page
-    --theme-primary-100: #3B6B90; //This should always be used as the primary blue
+    --secondary-font-color: #676C72; //secondary text gray
+    --theme-primary-100: #3B6B90; //primary blue
+    --error-text-color: #D42537; //primary red
+    --primary-white: #ffffff;
+    --primary-black: #000000;
 
     --font: Barlow, sans-serif;
     --default-font-color: #323130;
