--- a/app/views/shared/person/_personal_information.html.erb
+++ b/app/views/shared/person/_personal_information.html.erb
@@ -40,22 +40,22 @@
     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 form-group form-group-lg no-pd top-buffer" >
       <%= f.check_box :no_ssn,  :value => false, :onclick=>"$('#person_ssn').prop('disabled', !$('#person_ssn').prop('disabled')); $('#person_ssn').prop('required', !$('#person_ssn').prop('required'))" %>
       <label for="person_no_ssn"><span class='no_ssn'>&nbsp;<%= l10n("do_not_have_ssn") %></span></label>
-      <span><i class='fa fa-question-circle' id="no_ssn_tooltip" data-toggle="tooltip" title="<%=l10n("insured.consumer_roles.search.no_ssn_tooltip")%>"></i></span>
+      <span><i tabindex="0" class='fa fa-question-circle' id="no_ssn_tooltip" data-toggle="tooltip" title="<%=l10n("insured.consumer_roles.search.no_ssn_tooltip")%>"></i></span>
     </div>
     <div class="col-lg-1 col-md-1 col-sm-1 col-xs-6 form-group form-group-lg no-pd border_bottom_zero">
       <div class="radio">
         <%= f.radio_button :gender, "male", class: "required floatlabel", id: 'radio_male', required: true %>
-        <label for="radio_male"><span>MALE</span></label>
+        <label for="radio_male" tabindex="0" role="button" aria-pressed="true" onkeydown="handleRadioKeyDown(event, 'radio_male', 'radio_female')"><span>MALE</span></label>
       </div>
     </div>
     <div class="col-lg-1 col-md-1 col-sm-1 col-xs-6 form-group form-group-lg no-pd">
       <div class="radio">
         <%= f.radio_button :gender, "female", class: "required floatlabel", id: 'radio_female', required: true %>
-        <label  class="female" for="radio_female"><span>FEMALE</span></label>
+        <label for="radio_female" tabindex="0" role="button" aria-pressed="false" onkeydown="handleRadioKeyDown(event, 'radio_female', 'radio_male')"><span>FEMALE</span></label>
       </div>
     </div>
     <span>
-      <i id="gender-tooltip" class='fa fa-question-circle no-pd pull-right'  data-toggle="tooltip" title="<%=l10n("insured.consumer_roles.search.gender_tooltip")%>"></i>
+      <i tabindex="0" id="gender-tooltip" class='fa fa-question-circle no-pd pull-right'  data-toggle="tooltip" title="<%=l10n("insured.consumer_roles.search.gender_tooltip")%>"></i>
     </span>
   </div>
 </div>
@@ -66,4 +66,18 @@
       $('#person_ssn').prop('disabled', true);
     }
   });
+</script>
+
+<script type="text/javascript">
+  function handleRadioKeyDown(event, radioId, otherRadioId) {
+    if (event.key === 'Enter') {
+      event.preventDefault();
+      const radio = document.getElementById(radioId);
+      const otherRadio = document.getElementById(otherRadioId);
+      radio.checked = true;
+      otherRadio.checked = false;
+      radio.setAttribute("aria-pressed", "true");
+      otherRadio.setAttribute("aria-pressed", "false");
+    }
+  }
 </script>
