--- a/app/views/shared/_help_me_sign_up.html.erb
+++ b/app/views/shared/_help_me_sign_up.html.erb
@@ -1,3 +1,3 @@
-<div class="btn btn-default btn-block help-me-sign-up" data-target="#help_with_plan_shopping" data-toggle="modal">
+<button tabindex="0" class="btn btn-default btn-block help-me-sign-up" data-target="#help_with_plan_shopping" data-toggle="modal">
   Help me sign up
-</div>
+</button>
