--- a/app/views/insured/consumer_roles/_tribe_fields.html.erb
+++ b/app/views/insured/consumer_roles/_tribe_fields.html.erb
@@ -15,13 +15,13 @@
     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 form-group form-group-lg no-pd border_bottom_zero">
       <div class="radio">
         <%= f.radio_button :indian_tribe_member, "true", class: "required floatlabel", id: 'indian_tribe_member_yes' %>
-        <label for="indian_tribe_member_yes"><span class="yes_no_pair"><%= l10n("Yes") %></span></label>
+        <label tabindex="0" onkeydown="handleRadioKeyDown(event, 'indian_tribe_member_yes', 'indian_tribe_member_no')" for="indian_tribe_member_yes"><span class="yes_no_pair"><%= l10n("Yes") %></span></label>
       </div>
     </div>
     <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 form-group form-group-lg no-pd">
       <div class="radio">
         <%= f.radio_button :indian_tribe_member, "false", class: "required floatlabel", id: 'indian_tribe_member_no' %>
-        <label for="indian_tribe_member_no"><span class="yes_no_pair"><%= l10n("no") %></span></label>
+        <label tabindex="0" onkeydown="handleRadioKeyDown(event, 'indian_tribe_member_no', 'indian_tribe_member_yes')" for="indian_tribe_member_no"><span class="yes_no_pair"><%= l10n("no") %></span></label>
       </div>
     </div>
     <div class="col-md-2 not-sure-margin left-seprator">
@@ -115,4 +115,19 @@
           $('.featured-tribe-container').addClass('hide');
       }
     }
+</script>
+
+
+<script type="text/javascript">
+  function handleRadioKeyDown(event, radioId, otherRadioId) {
+    if (event.key === 'Enter') {
+      event.preventDefault();
+      const radio = document.getElementById(radioId);
+      const otherRadio = document.getElementById(otherRadioId);
+      radio.checked = true;
+      otherRadio.checked = false;
+      radio.setAttribute("aria-pressed", "true");
+      otherRadio.setAttribute("aria-pressed", "false");
+    }
+  }
 </script>
