--- a/app/views/insured/consumer_roles/_tribe_fields.html.erb
+++ b/app/views/insured/consumer_roles/_tribe_fields.html.erb
@@ -128,6 +128,12 @@
       otherRadio.checked = false;
       radio.setAttribute("aria-pressed", "true");
       otherRadio.setAttribute("aria-pressed", "false");
+      if (radio === 'indian_tribe_member_yes') {
+        document.getElementById('.tribal-container').removeClass('hide');
+      }
+      if (radio === 'indian_tribe_member_no') {
+        document.getElementById('.tribal-container').addClass('hide');
+      }
     }
   }
 </script>
