--- a/app/views/insured/consumer_roles/_tribe_fields.html.erb
+++ b/app/views/insured/consumer_roles/_tribe_fields.html.erb
@@ -14,14 +14,14 @@
     </div>
     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 form-group form-group-lg no-pd border_bottom_zero">
       <div class="radio">
-        <%= f.radio_button :indian_tribe_member, "true", class: "required floatlabel", id: 'indian_tribe_member_yes' %>
-        <label tabindex="0" onkeydown="handleRadioKeyDown(event, 'indian_tribe_member_yes', 'indian_tribe_member_no')" for="indian_tribe_member_yes"><span class="yes_no_pair"><%= l10n("Yes") %></span></label>
+        <%= f.radio_button :indian_tribe_member, true, class: "required floatlabel", id: 'indian-tribe-member-yes' %>
+        <label tabindex="0" onkeydown="handleRadioKeyDown(event, 'indian-tribe-member-yes', 'indian-tribe-member-no')" for="indian-tribe-member-yes"><span class="yes_no_pair"><%= l10n("Yes") %></span></label>
       </div>
     </div>
     <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 form-group form-group-lg no-pd">
       <div class="radio">
-        <%= f.radio_button :indian_tribe_member, "false", class: "required floatlabel", id: 'indian_tribe_member_no' %>
-        <label tabindex="0" onkeydown="handleRadioKeyDown(event, 'indian_tribe_member_no', 'indian_tribe_member_yes')" for="indian_tribe_member_no"><span class="yes_no_pair"><%= l10n("no") %></span></label>
+        <%= f.radio_button :indian_tribe_member, false, class: "required floatlabel", id: 'indian-tribe-member-no' %>
+        <label tabindex="0" onkeydown="handleRadioKeyDown(event, 'indian-tribe-member-no', 'indian-tribe-member-yes')" for="indian-tribe-member-no"><span class="yes_no_pair"><%= l10n("no") %></span></label>
       </div>
     </div>
     <div class="col-md-2 not-sure-margin left-seprator">
@@ -106,7 +106,7 @@
         if (tribal_name_container_show) {
           $('.tribal-name-container').removeClass('hide');
         } else {
-           $('#tribal-name').val("");
+          $('#tribal-name').val("");
           $('.tribal-name-container').addClass('hide');
         }
       } else {
@@ -126,14 +126,11 @@
       const otherRadio = document.getElementById(otherRadioId);
       radio.checked = true;
       otherRadio.checked = false;
-      radio.setAttribute("aria-pressed", "true");
-      otherRadio.setAttribute("aria-pressed", "false");
-      if (radio === 'indian_tribe_member_yes') {
-        document.getElementById('.tribal-container').removeClass('hide');
-      }
-      if (radio === 'indian_tribe_member_no') {
-        document.getElementById('.tribal-container').addClass('hide');
+
+      if (radio.id === 'indian-tribe-member-yes') {
+        document.querySelector('.tribal-container').classList.remove('hide');
+      } elsif (radio.id === 'indian_tribe_member_no') 
+        document.querySelector('tribal-container').classList.add('hide');
       }
     }
-  }
 </script>
