--- a/app/views/shared/_consumer_fields.html.erb
+++ b/app/views/shared/_consumer_fields.html.erb
@@ -12,17 +12,15 @@
           <label>Is this person a US citizen or US national? *</label>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 form-group form-group-lg no-pd">
-          <div tabindex="0" onkeydown="handleRadioKeyDown(event, 'person_us_citizen_yes', 'person_us_citizen_no')" class="radio skinned-form-controls skinned-form-controls-mac">
-            <input type="radio" name="us_citizen" value="true" required class="required floatlabel">
-            <label for="us_citizen_true">True</label>
+          <div class="radio skinned-form-controls skinned-form-controls-mac">
+            <%= f.radio_button :us_citizen, true, required: true, class: "required floatlabel", id: "person-us-citizen-yes"%>
+            <label for="person-us-citizen-yes", tabindex="0", onkeydown="handleRadioKeyDown(event, 'person-us-citizen-yes', 'person-us-citizen-no')"><span>YES</span></label>
           </div>
         </div>
         <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 form-group form-group-lg no-pd">
-          <div tabindex="0", onkeydown="handleRadioKeyDown(event, 'person_us_citizen_no', 'person_us_citizen_yes')", class="radio skinned-form-controls skinned-form-controls-mac">
-            <%= f.radio_button :us_citizen, false, required: true, class: "required floatlabel" %>
-            <%= f.label :us_citizen, :value => false do %>
-              <span class="yes_no_pair">No</span>
-            <% end %>
+          <div class="radio skinned-form-controls skinned-form-controls-mac">
+            <%= f.radio_button :us_citizen, false, required: true, class: "required floatlabel", id: "person-us-citizen-no" %>
+            <label for="person-us-citizen-no", tabindex="0", onkeydown="handleRadioKeyDown(event, 'person-us-citizen-no', 'person-us-citizen-yes')"><span>NO</span></label>
           </div>
         </div>
         <div class="col-md-2 not-sure-margin left-seprator">
@@ -37,18 +35,14 @@
         </div>
         <div class="col-lg-3 col-md-2 col-sm-6 col-xs-6 form-group form-group-lg no-pd">
           <div class="radio skinned-form-controls skinned-form-controls-mac">
-            <%= f.radio_button :naturalized_citizen, true, required: true, class: "required floatlabel" %>
-            <%= f.label :naturalized_citizen, :value => true do %>
-              <span tabindex="0", onkeydown="handleRadioKeyDown(event, 'naturalized_citizen_yes', 'naturalized_citizen_no')", class="yes_no_pair">Yes</span>
-            <% end %>
+            <%= f.radio_button :naturalized_citizen, true, required: true, class: "required floatlabel", id: "naturalized-citizen-yes"%>
+            <label for="naturalized-citizen-yes", tabindex="0" onkeydown="handleRadioKeyDown(event, 'naturalized-citizen-yes', 'naturalized-citizen-no')"><span>YES</span></label>
           </div>
         </div>
         <div class="col-lg-1 col-md-2 col-sm-6 col-xs-6 form-group form-group-lg no-pd">
-          <div tabindex="0", onkeydown="handleRadioKeyDown(event, 'naturalized_citizen_no', 'naturalized_citizen_yes')", class="radio skinned-form-controls skinned-form-controls-mac">
-            <%= f.radio_button :naturalized_citizen, false, required: true, class: "required floatlabel" %>
-            <%= f.label :naturalized_citizen, :value => false do %>
-              <span class="yes_no_pair">No</span>
-            <% end %>
+          <div class="radio skinned-form-controls skinned-form-controls-mac">
+            <%= f.radio_button :naturalized_citizen, false, required: true, class: "required floatlabel", id: "naturalized-citizen-no"%>
+            <label for="naturalized-citizen-no", tabindex="0" onkeydown="handleRadioKeyDown(event, 'naturalized-citizen-no', 'naturalized-citizen-yes')"><span>NO</span></label>
           </div>
         </div>
         <div class="col-md-2 not-sure-margin left-seprator">
@@ -73,19 +67,15 @@
           </div>
         <% else %>
           <div class="col-lg-3 col-md-2 col-sm-6 col-xs-6 form-group form-group-lg no-pd">
-            <div tabindex="0", onkeydown="handleRadioKeyDown(event, 'eligible_immigration_status_yes', 'eligible_immigration_status_no')" class="radio skinned-form-controls skinned-form-controls-mac">
-              <%= f.radio_button :eligible_immigration_status, true, class: "required floatlabel" %>
-              <%= f.label :eligible_immigration_status, :value => true do %>
-                <span class="yes_no_pair">Yes</span>
-              <% end %>
+            <div class="radio skinned-form-controls skinned-form-controls-mac">
+              <%= f.radio_button :eligible_immigration_status, true, required: true, class: "required floatlabel", id: "eligible-immigration-status-yes"%>
+              <label for="eligible-immigration-status-yes", tabindex="0" onkeydown="handleRadioKeyDown(event, 'eligible-immigration-status-yes', 'eligible-immigration-status-no')"><span>YES</span></label>
             </div>
           </div>
           <div class="col-lg-1 col-md-2 col-sm-6 col-xs-6 form-group form-group-lg no-pd">
-            <div tabindex="0", onkeydown="handleRadioKeyDown(event, 'eligible_immigration_status_no', 'eligible_immigration_status_yes')" class="radio skinned-form-controls skinned-form-controls-mac">
-              <%= f.radio_button :eligible_immigration_status, false, class: "required floatlabel" %>
-              <%= f.label :eligible_immigration_status, :value => false do %>
-                <span class="yes_no_pair">No</span>
-              <% end %>
+            <div class="radio skinned-form-controls skinned-form-controls-mac">
+              <%= f.radio_button :eligible_immigration_status, false, required: true, class: "required floatlabel", id: "eligible-immigration-status-no"%>
+              <label for="eligible-immigration-status-no", tabindex="0" onkeydown="handleRadioKeyDown(event, 'eligible-immigration-status-no', 'eligible-immigration-status-yes')"><span>NO</span></label>
             </div>
           </div>
         <% end %>
