--- a/app/views/shared/_glossary.html.erb
+++ b/app/views/shared/_glossary.html.erb
@@ -4,7 +4,8 @@
   <% term_display = term %>
 <% end %>
 
-<span class="glossary"
+<span tabindex="0"
+      class="glossary"
       data-toggle="popover"
       data-placement="auto top"
       data-trigger="click focus"
