--- a/app/views/shared/_consumer_fields.html.erb
+++ b/app/views/shared/_consumer_fields.html.erb
@@ -135,3 +135,16 @@
     }
   }
 </script>
+
+<script type="text/javascript">
+  function handleTribeRadioKeyDown(event, radioId, otherRadioId) {
+    if (event.key === 'Enter') {
+      event.preventDefault();
+      const radio = document.getElementById(radioId);
+      const otherRadio = document.getElementById(otherRadioId);
+      radio.checked = true;
+      otherRadio.checked = false;
+      document.getElementById('tribal_container_test').classList.remove('hide');
+    }
+  }
+</script>
