move hidden text

--- a/app/views/shared/person/_consumer_information.html.erb
+++ b/app/views/shared/person/_consumer_information.html.erb
@@ -53,9 +53,8 @@
         <span class='no_ssn'>&nbsp;<%= l10n("do_not_have_ssn") %></span>
       <% end %>
       <span>
-        <i tabindex="0" class='fa fa-question-circle' id="no_ssn_tooltip" data-toggle="tooltip" title="<%=l10n("insured.consumer_roles.search.no_ssn_tooltip")%>">
-          <span class="hide"> "<%=l10n("insured.consumer_roles.search.no_ssn_tooltip")%>"</span>
-        </i>
+        <i tabindex="0" class='fa fa-question-circle' id="no_ssn_tooltip" data-toggle="tooltip" title="<%=l10n("insured.consumer_roles.search.no_ssn_tooltip")%>"></i>
+        <span class="hide"> "<%=l10n("insured.consumer_roles.search.no_ssn_tooltip")%>"</span>
       </span>
     </div>
 
@@ -72,9 +71,8 @@
       </div>
     </div>
   <span>
-    <i tabindex="0" class='fa fa-question-circle no-pd pull-right' id="gender-tooltip" data-toggle="tooltip" title="<%=l10n("insured.consumer_roles.search.gender_tooltip")%>">
-      <span class="hide"> "<%=l10n("insured.consumer_roles.search.gender_tooltip")%>"</span>
-    </i>
+    <i tabindex="0" class='fa fa-question-circle no-pd pull-right' id="gender-tooltip" data-toggle="tooltip" title="<%=l10n("insured.consumer_roles.search.gender_tooltip")%>"></i>
+    <span class="hide"> "<%=l10n("insured.consumer_roles.search.gender_tooltip")%>"</span>
   </span>
   </div>
 </div>
