--- a/app/views/shared/person/_consumer_information.html.erb
+++ b/app/views/shared/person/_consumer_information.html.erb
@@ -56,15 +56,15 @@
     </div>
 
     <div class="col-lg-1 col-md-2 col-sm-2 col-xs-2 form-group form-group-lg no-pd border_bottom_zero">
-      <div class="radio">
+      <div tabindex="0" onkeydown="handleRadioKeyDown(event, 'radio_male')"class="radio">
         <%= f.radio_button :gender, "male", class: "required floatlabel", id: "radio_male", checked: true %>
-        <label for="radio_male" tabindex="0" role="button" aria-pressed="true" onkeydown="handleRadioKeyDown(event, 'radio_male', 'radio_female')"><span>MALE</span></label>
+        <label for="radio_male" role="button" aria-pressed="true"><span>MALE</span></label>
       </div>
     </div>
     <div class="col-lg-1 col-md-2 col-sm-2 col-xs-6 form-group form-group-lg no-pd">
-      <div class="radio">
+      <div tabindex="0" onkeydown="handleRadioKeyDown(event, 'radio_female')" class="radio">
         <%= f.radio_button :gender, "female", class: "required floatlabel", id: "radio_female", checked: false %>
-        <label for="radio_female" tabindex="0" role="button" aria-pressed="false" onkeydown="handleRadioKeyDown(event, 'radio_female', 'radio_male')"><span>FEMALE</span></label>
+        <label for="radio_female" role="button" aria-pressed="false"><span>FEMALE</span></label>
       </div>
     </div>
   <span>
@@ -81,18 +81,4 @@
     $('.field_with_errors > *').unwrap();
     Freebies.floatlabels();
   });
-</script>
-
-<script type="text/javascript">
-  function handleRadioKeyDown(event, radioId, otherRadioId) {
-    if (event.key === 'Enter') {
-      event.preventDefault();
-      const radio = document.getElementById(radioId);
-      const otherRadio = document.getElementById(otherRadioId);
-      radio.checked = true;
-      otherRadio.checked = false;
-      radio.setAttribute("aria-pressed", "true");
-      otherRadio.setAttribute("aria-pressed", "false");
-    }
-  }
 </script>
