--- a/app/views/shared/person/_personal_information.html.erb
+++ b/app/views/shared/person/_personal_information.html.erb
@@ -45,13 +45,13 @@
     <div class="col-lg-1 col-md-1 col-sm-1 col-xs-6 form-group form-group-lg no-pd border_bottom_zero">
       <div class="radio">
         <%= f.radio_button :gender, "male", class: "required floatlabel", id: 'radio_male', required: true %>
-        <label for="radio_male" tabindex="0" role="button" aria-pressed="true" onkeydown="handleRadioKeyDown(event, 'radio_male', 'radio_female')"><span>MALE</span></label>
+        <label for="radio_male" tabindex="0" role="button" aria-pressed="true""><span>MALE</span></label>
       </div>
     </div>
     <div class="col-lg-1 col-md-1 col-sm-1 col-xs-6 form-group form-group-lg no-pd">
       <div class="radio">
         <%= f.radio_button :gender, "female", class: "required floatlabel", id: 'radio_female', required: true %>
-        <label for="radio_female" tabindex="0" role="button" aria-pressed="false" onkeydown="handleRadioKeyDown(event, 'radio_female', 'radio_male')"><span>FEMALE</span></label>
+        <label for="radio_female" tabindex="0" role="button" aria-pressed="false"><span>FEMALE</span></label>
       </div>
     </div>
     <span>
@@ -66,18 +66,4 @@
       $('#person_ssn').prop('disabled', true);
     }
   });
-</script>
-
-<script type="text/javascript">
-  function handleRadioKeyDown(event, radioId, otherRadioId) {
-    if (event.key === 'Enter') {
-      event.preventDefault();
-      const radio = document.getElementById(radioId);
-      const otherRadio = document.getElementById(otherRadioId);
-      radio.checked = true;
-      otherRadio.checked = false;
-      radio.setAttribute("aria-pressed", "true");
-      otherRadio.setAttribute("aria-pressed", "false");
-    }
-  }
 </script>
