--- a/app/views/shared/_is_applying_for_coverage.html.erb
+++ b/app/views/shared/_is_applying_for_coverage.html.erb
@@ -1,31 +1,16 @@
 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 form-group form-group-lg no-pd">
   <div class="radio">
     <%= f.radio_button :is_applying_coverage, true, class: "required floatlabel", id: 'is_applying_coverage_true', checked: first_checked%>
-    <label onkeydown="handleRadioKeyDown(event, 'is_applying_coverage_true', 'is_applying_coverage_false')" tabindex="0" for="is_applying_coverage_true"><span class="yes_no_pair">Yes</span></label>
+    <label tabindex="0" for="is_applying_coverage_true"><span class="yes_no_pair">Yes</span></label>
   </div>
 </div>
 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6 form-group form-group-lg no-pd">
   <div class="radio">
     <%= f.radio_button :is_applying_coverage, false, class: "required floatlabel", id: 'is_applying_coverage_false', checked: second_checked %>
-    <label onkeydown="handleRadioKeyDown(event, 'is_applying_coverage_false', 'is_applying_coverage_true')" tabindex="0" for="is_applying_coverage_false"><span class="yes_no_pair">No</span></label>
+    <label tabindex="0" for="is_applying_coverage_false"><span class="yes_no_pair">No</span></label>
   </div>
 </div>
 <div class="col-md-2 left-seprator" style="margin-top: 14px">
   <a href="#is_applying_coverage" data-toggle="modal" data-target="#is_applying_coverage">Not sure?</a>
   <%= render partial: 'shared/modal_support_text_household', locals: {key: "is_applying_coverage"} %>
 </div>
-
-
-<script type="text/javascript">
-  function handleRadioKeyDown(event, radioId, otherRadioId) {
-    if (event.key === 'Enter') {
-      event.preventDefault();
-      const radio = document.getElementById(radioId);
-      const otherRadio = document.getElementById(otherRadioId);
-      radio.checked = true;
-      otherRadio.checked = false;
-      radio.setAttribute("aria-pressed", "true");
-      otherRadio.setAttribute("aria-pressed", "false");
-    }
-  }
-</script>
