--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -44,6 +44,7 @@
 //= require effective_datatables
 //= require jquery.steps
 //= require bootstrap-treeview
+//= require keyboard_navigation
 //= require_tree .
 
 var disableSelectric = false;
