AA compliance for document upload page

--- a/app/javascript/css/cr97.scss
+++ b/app/javascript/css/cr97.scss
@@ -4,6 +4,7 @@
     --theme-primary-100: #3B6B90; //used as the primary blue
     --theme-secondary: #3D5D6F; //used as a secondary darker blue
     --error-color: #D42537; //used for error messages and buttons
+    --unfocused-red: #D4403A; //soft red color
     --primary-white: #ffffff;
     --primary-black: #000000;
     --alert-notice-green: #62703E; //used for success messages
