AA compliance for document upload page

--- a/app/views/insured/interactive_identity_verifications/_outstanding_ridp_documents.html.erb
+++ b/app/views/insured/interactive_identity_verifications/_outstanding_ridp_documents.html.erb
@@ -23,7 +23,7 @@
                       <div class="v-type-upload col-md-4">
                         <% if ridp_type_unverified?(ridp_type, @person) %>
                           <% if ridp_type == 'Identity' %>
-                              <span class="btn btn-default btn-file" data-toggle="modal" data-target="#insured_ridp_modal" id ="upload_identity">
+                              <span tabindex="0" class="btn btn-default btn-file" data-toggle="modal" data-target="#insured_ridp_modal" id ="upload_identity">
                                 <i class="fa fa-upload" aria-hidden="true"></i>
                                 Upload Documents
                               </span>
