AA compliance applying reductions page

--- a/app/javascript/css/cr97.scss
+++ b/app/javascript/css/cr97.scss
@@ -3,8 +3,11 @@
     --bold-font-color: #323130;
     --theme-primary-100: #3B6B90; //used as the primary blue
     --theme-secondary: #3D5D6F; //used as a secondary darker blue
-    --error-color: #D42537; //used for error messages and buttons
+    --primary-red: #D42537; //used for error messages and buttons
     --unfocused-red: #D4403A; //soft red color
+    --background-light-red: #F9F1F1; //used for error bar backgrounds
+    --primary-green: #5A7334; //used for continue buttons
+    --secondary-green: #738C4A; //used for background for continue buttons
     --primary-white: #ffffff;
     --primary-black: #000000;
     --alert-notice-green: #62703E; //used for success messages
