--- a/app/views/shared/_individual_progress.html.erb
+++ b/app/views/shared/_individual_progress.html.erb
@@ -39,7 +39,7 @@
 <% if step == 1 && search_page == true %>
   <%= link_to "Continue", insured_consumer_role_index_path(person: @person_params), method: :post, class: 'btn btn-lg btn-primary btn-block' %>
 <% elsif step == 1 %>
-  <span class="btn btn-lg btn-primary btn-br btn-block" onclick="PersonValidations.manageRequiredValidations($(this));">CONTINUE</span>
+  <span tabindex="0" onkeydown="handleButtonKeyDown(event, 'continue_button')" id="continue_button" class="btn btn-lg btn-primary btn-br btn-block" onclick="PersonValidations.manageRequiredValidations($(this));">CONTINUE</span>
   <button class="btn btn-lg btn-primary btn-br btn-block interaction-click-control-continue hidden" type="submit">CONTINUE</button>
 <% elsif ridp == true && step == 2 %>
   <% if next_link.present? && current_user.has_hbx_staff_role? && (@person.primary_family.application_type == "Phone" || @person.primary_family.application_type == "Paper") %>
@@ -75,13 +75,3 @@
             show_account_button: step > 2 && EnrollRegistry.feature_enabled?(:back_to_account_all_shop),
             is_complete: step == 6,
             show_help_button: step != 1 && step < 6 } %>
-
-<script>
-  function handleButtonKeyDown(event, buttonId) {
-    if (event.key === 'Enter') {
-      event.preventDefault();
-      const button = document.getElementById(buttonId);
-      button.click();
-    }
-  }
-</script>
