change health translation key name

--- a/app/views/insured/plan_shoppings/show.html.slim
+++ b/app/views/insured/plan_shoppings/show.html.slim
@@ -9,7 +9,7 @@
         .ct-1
           h1.heading-text = l10n("insured.plan_shoppings.show.title")
           - if @coverage_kind == "health"
-            h4.switch-header = l10n("insured.plan_shoppings.show.title.content")
+            h4.switch-header = l10n("insured.plan_shoppings.show.health_title.content")
           - else
             h4.switch-header = l10n("insured.plan_shoppings.show.dental_title.content")
           h4.swtich-header
