--- a/app/views/insured/plan_shoppings/show.html.slim
+++ b/app/views/insured/plan_shoppings/show.html.slim
@@ -8,7 +8,7 @@
       .col-lg-8.col-md-8.col-sm-8.col-xs-12
         .ct-1
           h1.heading-text = l10n("insured.plan_shoppings.show.title")
-          - if @coverage_kind == "health"
+          - if @hbx_enrollment.is_health_enrollment?
             h4.switch-header = l10n("insured.plan_shoppings.show.health_title.content")
           - else
             h4.switch-header = l10n("insured.plan_shoppings.show.dental_title.content")
