--- a/app/views/shared/_individual_progress.html.erb
+++ b/app/views/shared/_individual_progress.html.erb
@@ -6,6 +6,9 @@
 <% application_verified = defined?(application_verified) ? application_verified : false %>
 <% search_page = defined?(search_page) ? search_page : false %>
 
+<% percent_complete = 0 %>
+<% percent_complete = step == 1 ? 15 : (step == 2) ? 35 : ((step == 3) ? 50 : ((step == 4) ? 75 : ((step == 5) ? 90 : (step == 6 ? 100 : 0)))) %>
+
 <% if show_component(request.path) %>
   <h3><%= "#{percent_complete}% Complete" %></h3>
   <ul class="list-unstyled progress-wrapper hidden-xs">
