--- a/app/views/ui-components/v1/navs/_primary_nav.html.slim
+++ b/app/views/ui-components/v1/navs/_primary_nav.html.slim
@@ -55,7 +55,8 @@
                   = render partial: 'exchanges/hbx_profiles/shared/nav_link', locals: { tab_name: 'general-agencies', link_path: main_app.general_agency_index_exchanges_hbx_profiles_path, display_name: 'General Agencies', active_tab: 'general-agencies', remote: false, pundit_object: nil, pundit_method: nil}
               - if external_application_configured?("admin") && EnrollRegistry.feature_enabled?(:agency_staff)
                 li
-                  = link_to(ExternalApplications::ApplicationProfile.find_by_application_name("admin").url + "/agencies/agency-staff?auth_token=" + jwt_for_external_application, "aria-expanded" => "true", data: { turbolinks: false } ) do
+                  - url = ExternalApplications::ApplicationProfile.find_by_application_name("admin").url + "/agencies/agency-staff"
+                  = link_to(url, "aria-expanded" => "true", data: { turbolinks: false }, headers: { "Authorization" => "Bearer #{jwt_for_external_application}" }) do
                     span.hidden-xs
                       | Agency Staff
                     span.glyphicon.glyphicon-th-list.hidden-md.hidden-sm.hidden-lg title="Agency Staff"
