initial pass at broker forms

--- a/app/assets/javascripts/ui-components/forms.js.erb
+++ b/app/assets/javascripts/ui-components/forms.js.erb
@@ -79,7 +79,7 @@ function addOfficeLocation() {
 }
 
 function removeOfficeLocation(element) {
-  element.closest('#officeLocations').remove()
+  element.closest('#officeLocations').remove();
   count --;
 }
 
