--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/broker_agencies/broker_agency_staff_roles/search_broker_agency.js.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/broker_agencies/broker_agency_staff_roles/search_broker_agency.js.erb
@@ -1,2 +1,6 @@
+if (bs4 == "true") {
+  <%= @bs4 = true %>
+}
+
 $('.broker-agency-search .result').html("<%= escape_javascript(render "search_broker_agency") %>");
 $('.broker-agency-search a.search').button('reset');
